--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head> <title> My space </title> </head>
 <body>
-  my na한글됨.
+<body bgcolor= #5D0000>  
+
+<font color = #FF0000 size=15>
+나만의 공간 </font>
 
 </body>
 </html>
