--- a/index.html
+++ b/index.html
@@ -62,11 +62,23 @@
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
             labelContainer.childNodes[i].innerHTML = classPrediction;
+
+       	if(prediction[i].probability.toFixed(2) >= 0.80)
+	       {
+	               const input = document.getElementById("inputText");
+		              input.value = prediction[i].className;
+	       }
+
         }
     }
 </script>
- 
-  
+
+
+
+
+<br><br>
+인식된 수어는
+<input id='inputText' type="text" /> 입니다. <br>
  
 </body>
 </html>
