--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body bgcolor= ##FFFFFF>  
 
 <font color = #FF0000 size=15>
-나만의 공간 </font>
+카메라를 연결하고 start 버튼을 누르세요! </font>
 
 <div>Teachable Machine Image Model</div>
 <button type="button" onclick="init()">Start</button>
@@ -68,7 +68,7 @@
 
 
 <br><br>
-인식된 수어는
+당신의 
 <input id='inputText' type="text" /> 입니다. <br>
  
 </body>
