--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
             labelContainer.childNodes[i].innerHTML = classPrediction;
+
+	if(prediction[i].probability.toFixed(2) >= 0.50)
+		{
+	               const input = document.getElementById("inputText");
+		              input.value = prediction[i].className;
+		}
         }
     }
 </script>
 
 
 <br><br>
-당신의 
+당신의 은
 <input id='inputText' type="text" /> 입니다. <br>
  
 </body>
