--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <html>
-<head> <title> My space </title> </head>
+<head> <title> 동물상 확인 </title> </head>
 <body>
-<body bgcolor= ##FFFFFF>  
+<body bgcolor= #FFCCFF>  
+<pre>
 
-<font color = #FF0000 size=15>
-카메라를 연결하고 start 버튼을 누르세요! </font>
 
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
+
+
+
+</pre>
+<center> <font color = #660099 size=15>
+카메라를 연결하고 시작 버튼을 누르세요! </font>
+<pre>
+
+
+
+
+
+</pre>
+<div>당신의 동물상을 확인하세요!</div>
+<button type="button" onclick="init()">시작</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -35,7 +47,7 @@
 
         // Convenience function to setup a webcam
         const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+        webcam = new tmImage.Webcam(250, 250, flip); // width, height, flip
         await webcam.setup(); // request access to the webcam
         await webcam.play();
         window.requestAnimationFrame(loop);
@@ -65,7 +77,7 @@
 
 	if(prediction[i].probability.toFixed(2) >= 0.50)
 		{
-	               const input = document.getElementById("inputText");
+	              const input = document.getElementById("inputText");
 		              input.value = prediction[i].className;
 		}
         }
@@ -73,9 +85,9 @@
 </script>
 
 
-<br><br>
+<br><br> <font size=5>
 당신의 동물상은
-<input id='inputText' type="text" /> 입니다. <br>
- 
+<input id='inputText' type="text" /> 입니다. </font><br>
+ </center>
 </body>
 </html>
